[gd_scene load_steps=2 format=3 uid="uid://cfsn81qx1jkhb"]

[ext_resource type="Script" path="res://Objects/Components/navigation_component.gd" id="1_kg6vw"]

[node name="NavigationComponent" type="Node2D" node_paths=PackedStringArray("ray_cast_pivot", "front_ray_cast")]
script = ExtResource("1_kg6vw")
min_distance_attack = 40.0
ray_cast_pivot = NodePath("RaycastPivot")
front_ray_cast = NodePath("RaycastPivot/Front")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 50.0
path_max_distance = 10.0
radius = 20.0
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 1, 1)
debug_path_custom_point_size = 2.0
debug_path_custom_line_width = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="RaycastPivot" type="Node2D" parent="."]

[node name="Front" type="RayCast2D" parent="RaycastPivot"]
target_position = Vector2(100, 0)
collision_mask = 4

[node name="Left" type="RayCast2D" parent="RaycastPivot"]
rotation = -0.523598
target_position = Vector2(100, 0)
collision_mask = 4

[node name="LeftBack" type="RayCast2D" parent="RaycastPivot"]
rotation = -1.309
target_position = Vector2(100, 0)
collision_mask = 4

[node name="Right" type="RayCast2D" parent="RaycastPivot"]
rotation = 0.523598
target_position = Vector2(100, 0)
collision_mask = 4

[node name="RightBack" type="RayCast2D" parent="RaycastPivot"]
rotation = 1.309
target_position = Vector2(100, 0)
collision_mask = 4

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
